Don't create new HashSets, also use Hamcrest assertThat